src/main/java/com/example/steplang/errors/AuthError.java
package com.example.steplang.errors;

public enum AuthError {
    USERNAME_ALREADY_EXIST,
    EMAIL_ALREADY_EXIST,
    USER_NOT_FOUND,
    INVALID_CREDENTIALS,
    INVALID_REFRESH_TOKEN,
    EXPIRED_REFRESH_TOKEN,
}
